# ai-code-helper

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/adapters/: base.py  ollama_adapter.py  openai_adapter.py
src/api/: main.py
src/api/exceptions/: handlers.py
src/api/middleware/: logging.py
src/api/v1/: api.py
src/api/v1/routes/: execution.py  health.py  providers.py
src/core/: config.py  logging.py  test_config.py
src/models/: base.py  demo.py  error.py  execution.py  health.py  provider.py  provider_status.py
src/services/: adapter_registry.py  execution_service.py  ollama_service.py  provider_service.py
tests/: test_health.py
